Camino perf is bad when deleting a lot of bookmarks. b=357080, r=smorgan, sr=pinkerton